quick fix to make chevron button work on mobile

--- a/app/assets/sass/brexit/_button.scss
+++ b/app/assets/sass/brexit/_button.scss
@@ -59,3 +59,49 @@
 .govuk-button-brexit:focus .govuk-button-brexit__svg {
   color: govuk-colour("yellow");
 }
+
+@media only screen and (max-width : 480px) {
+
+  .govuk-button-brexit {
+  @include govuk-font(24, $weight: bold, $line-height: 72px);
+  background-color: govuk-brexit-colour("red");
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 3px;
+  display: inline-block;
+  height: 72px;
+  margin-top: govuk-spacing(3);
+  margin-bottom: govuk-spacing(3);
+  padding-left: govuk-spacing(3);
+  padding-right: govuk-spacing(1);
+  position: relative;
+  text-decoration: none;
+
+  &:link,
+  &:visited,
+  &:hover,
+  &:active {
+    color: govuk-brexit-colour("red");
+  }
+
+  &:hover {
+    background-color: govuk-brexit-colour("dark-red");
+  }
+
+  &:focus {
+    background-color: govuk-colour("yellow");
+    border: 0 none;
+    box-shadow: none;
+    outline: none;
+    text-decoration: none;
+  }
+
+}
+
+// Button label
+.govuk-button-brexit__label {
+  color: govuk-colour("white");
+  font-size: 14px;
+  line-height: 18px
+}
+
+  }
